apps/external/proxmox/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.joejad.com`)
      kind: Rule
      services:
        - name: proxmox
          port: 8006
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
